Homeland: Final robust fixes for frontend styles, z-index, and element mapping

--- a/wp-content/plugins/homeland/admin.css
+++ b/wp-content/plugins/homeland/admin.css
@@ -67,7 +67,7 @@
 .homeland-modal {
     display: none;
     position: fixed;
-    z-index: 999999;
+    z-index: 10000;
     left: 0;
     top: 0;
     width: 100%;
